--- a/cmcc-rax3000m/hanwckf-immortalwrt/.config
+++ b/cmcc-rax3000m/hanwckf-immortalwrt/.config
@@ -113,7 +113,7 @@ CONFIG_MTK_WSC_V2_SUPPORT=y
 CONFIG_OPENSSL_WITH_NPN=y
 # CONFIG_PACKAGE_TURBOACC_INCLUDE_FLOW_OFFLOADING is not set
 CONFIG_PACKAGE_TURBOACC_INCLUDE_NO_FASTPATH=y
-# CONFIG_PACKAGE_blockd=y
+CONFIG_PACKAGE_blockd=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_datconf=y
 CONFIG_PACKAGE_datconf-lua=y
