--- a/cmcc-rax3000m/hanwckf-immortalwrt/.config
+++ b/cmcc-rax3000m/hanwckf-immortalwrt/.config
@@ -436,4 +436,67 @@ CONFIG_PACKAGE_kmod-usb-printer=y
 # CONFIG_PACKAGE_shadowsocks-rust-sslocal is not set
 # CONFIG_PACKAGE_shadowsocksr-libev-ssr-local is not set
 # CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir is not set
-
+#
+# Drivers
+#
+CONFIG_PACKAGE_kmod-conninfra=y
+CONFIG_MTK_CONNINFRA_APSOC=y
+CONFIG_MTK_CONNINFRA_APSOC_MT7981=y
+CONFIG_CONNINFRA_EMI_SUPPORT=y
+CONFIG_CONNINFRA_AUTO_UP=y
+CONFIG_PACKAGE_kmod-mt_wifi=y
+CONFIG_MTK_SUPPORT_OPENWRT=y
+CONFIG_MTK_WIFI_DRIVER=y
+CONFIG_MTK_FIRST_IF_MT7981=y
+CONFIG_MTK_SECOND_IF_NONE=y
+CONFIG_MTK_THIRD_IF_NONE=y
+CONFIG_MTK_RT_FIRST_IF_RF_OFFSET=0xc0000
+CONFIG_MTK_MT_WIFI=m
+CONFIG_MTK_MT_WIFI_PATH="mt_wifi"
+#
+# WiFi Generic Feature Options
+#
+CONFIG_MTK_FIRST_IF_EEPROM_FLASH=y
+CONFIG_MTK_RT_FIRST_CARD_EEPROM="flash"
+CONFIG_MTK_WIFI_BASIC_FUNC=y
+CONFIG_MTK_DOT11_N_SUPPORT=y
+CONFIG_MTK_DOT11_VHT_AC=y
+CONFIG_MTK_DOT11_HE_AX=y
+CONFIG_MTK_CFG_SUPPORT_FALCON_MURU=y
+CONFIG_MTK_CFG_SUPPORT_FALCON_TXCMD_DBG=y
+CONFIG_MTK_CFG_SUPPORT_FALCON_SR=y
+CONFIG_MTK_CFG_SUPPORT_FALCON_PP=y
+CONFIG_MTK_WIFI_TWT_SUPPORT=y
+CONFIG_MTK_G_BAND_256QAM_SUPPORT=y
+CONFIG_MTK_TPC_SUPPORT=y
+CONFIG_MTK_ICAP_SUPPORT=y
+CONFIG_MTK_SPECTRUM_SUPPORT=y
+CONFIG_MTK_BACKGROUND_SCAN_SUPPORT=y
+CONFIG_MTK_SMART_CARRIER_SENSE_SUPPORT=y
+CONFIG_MTK_SCS_FW_OFFLOAD=y
+CONFIG_MTK_MT_DFS_SUPPORT=y
+CONFIG_MTK_OFFCHANNEL_SCAN_FEATURE=y
+CONFIG_MTK_HDR_TRANS_TX_SUPPORT=y
+CONFIG_MTK_HDR_TRANS_RX_SUPPORT=y
+CONFIG_MTK_DBDC_MODE=y
+CONFIG_MTK_WSC_INCLUDED=y
+CONFIG_MTK_WSC_V2_SUPPORT=y
+CONFIG_MTK_DOT11W_PMF_SUPPORT=y
+CONFIG_MTK_TXBF_SUPPORT=y
+CONFIG_MTK_FAST_NAT_SUPPORT=y
+CONFIG_MTK_WHNAT_SUPPORT=m
+CONFIG_MTK_WARP_V2=y
+CONFIG_MTK_IGMP_SNOOP_SUPPORT=y
+CONFIG_MTK_MEMORY_SHRINK=y
+CONFIG_MTK_MEMORY_SHRINK_AGGRESS=y
+CONFIG_MTK_RTMP_FLASH_SUPPORT=y
+CONFIG_MTK_ATE_SUPPORT=y
+CONFIG_MTK_WLAN_SERVICE=y
+CONFIG_MTK_MAP_SUPPORT=y
+CONFIG_MTK_MAP_R2_VER_SUPPORT=y
+CONFIG_MTK_MAP_R3_VER_SUPPORT=y
+CONFIG_MTK_UAPSD=y
+CONFIG_MTK_RED_SUPPORT=y
+CONFIG_MTK_FIRST_IF_IPAILNA=y
+CONFIG_MTK_MT7981_NEW_FW=y
+CONFIG_MTK_WIFI_FW_BIN_LOAD=y
